# duckdb_extension_example

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: build_and_tests.yml
assembly/duckdb-wasm/v1.1.1/wasm_eh/: sayhello.duckdb_extension.wasm
dockerfiiles/build-wasm/: Dockerfile
dockerfiiles/duckdb-wasm/: README.md
dockerfiles/build-wasm/: Dockerfile  README.md
dockerfiles/duckdb-wasm/: README.md
src/: CMakeLists.txt  sayhello.cpp  sayhello_extension.cpp
src/include/: sayhello.hpp
test/sql/: sayhello.test
